# json-viewer-for-model-response

./: README.md  pyproject.toml
src/jsonl_viewer/: __init__.py  cli.py
src/jsonl_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
