[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl-viewer"
version = "0.1.0"
description = "A CLI tool to view and analyze JSONL files (especially Claude Code logs)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["jsonl", "cli", "viewer", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
jv = "jsonl_viewer.cli:main"
jsonl-view = "jsonl_viewer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jsonl-viewer"

[tool.setuptools.packages.find]
where = ["src"]
